testsuite/bsc.typechecker/CircularRegister.bs.bsc-out.expected
checking package dependencies
compiling CircularRegister.bs
Error: "CircularRegister.bs", line 8, column 52: (T0004)
  Unbound variable `r'
